# RemoteCamera

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Kconfig.projbuild  Makefile  build.ninja  cmake_install.cmake  image_analysis.cpp  main.cpp  my_app  ping_check.c  testing.c  vcpkg.json
.cmake/api/v1/reply/: cache-v2-2e2c14b8c70fbcae3193.json  cache-v2-32e4321ab82874fbdd6c.json  cache-v2-fb553f7917fcabf02abf.json  cmakeFiles-v1-080bb563708432c5ca79.json  cmakeFiles-v1-1747a6a9658c99e8eeb5.json  cmakeFiles-v1-c71ee3afe9d0afea2c7e.json  codemodel-v2-0f4d6e4d36b872c34098.json  codemodel-v2-8a46b5005c6b35c159a2.json  codemodel-v2-a423a14f1bb620a45b51.json  index-2025-07-06T00-51-28-0204.json  index-2025-07-29T03-05-38-0598.json  index-2025-08-31T23-28-41-0026.json  target-my_app-924e05af51e1754897fc.json  target-my_app-b2721fe54d92a91a20e2.json  target-my_app-efb09f0daed5053f885c.json
esp_stuff/: Makefile  sdkconfig  sdkconfig.old
esp_stuff/main/: CMakeLists.txt  Kconfig.projbuild  base64.c  main.c
esp_stuff/main/extra_executables/: fotos.c  http_requests.c  ping_check.c  wifi.c
esp_stuff/main/extra_includes/: fotos.h  http_requests.h  ping_check.h  wifi.h
extra_executables/: check_images.cpp
extra_headers/: check_images.h
hello_world/main/: CMakeLists.txt  main.c
hello_world/main/extra_executables/: http_requests.c  wifi.c
hello_world/main/extra_includes/: http_requests.h  ping_check.h  wifi.h
